--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -123,23 +123,10 @@ body {
 
 
 
-                        .small-dropdown {
-                            top: calc(100% - 1px);
-                            bottom: auto;
-                            visibility: visible;
-                            max-width: 1240px;
-                            margin-top: 0;
-                            pointer-events: auto;
-                            opacity: 1;
-                        }
-
-                        .big-dropdown {
-                            // top: calc(100% - 1px);
-                            // bottom: auto;
-                            // visibility: visible;
-                            // margin-top: 0;
-                            // opacity: 1;
-
+                        .small-dropdown, 
+                        .big-dropdown, 
+                        .tech-dropdown, 
+                        .post-dropdown {
                             top: calc(100% - 1px);
                             bottom: auto;
                             visibility: visible;
@@ -150,7 +137,11 @@ body {
                         }
                     }
 
-
+                    h3.drop-title {
+                        font-size: 22px;
+                        font-weight: 700;
+                        margin-bottom: 30px;
+                    }
 
                     .small-dropdown {
                         position: absolute;
@@ -162,8 +153,6 @@ body {
                         visibility: hidden;
                         min-width: 210px;
                         margin-top: 20px;
-                        list-style: none;
-                        -webkit-transition: top 0s, opacity .25s cubic-bezier(.32, .74, .57, 1), margin .25s cubic-bezier(.32, .74, .57, 1);
                         transition: top 0s, opacity .25s cubic-bezier(.32, .74, .57, 1), margin .25s cubic-bezier(.32, .74, .57, 1);
                         pointer-events: none;
                         opacity: 0;
@@ -298,11 +287,7 @@ body {
                             }
                         }
 
-                        h3 {
-                            font-size: 22px;
-                            font-weight: 700;
-                            margin-bottom: 30px;
-                        }
+                    
 
                         h4 {
                             margin-bottom: 30px;
@@ -371,28 +356,7 @@ body {
                             }
                         }
 
-                        .inners {
-                            h5 {
-                                font-size: 16px;
-                                color: #282828;
-                                transition: all ease-in 0.3s;
-                                text-decoration: underline;
-                                text-decoration-color: transparent;
-                                font-weight: 700;
-                                margin-bottom: 10px;
-
-                                &:hover {
-                                    color: $colorPink;
-                                    text-decoration-color: $colorPink;
-                                }
-                            }
-
-                            span {
-                                color: #666;
-                                font-size: 13px;
-                                font-weight: 300;
-                            }
-                        }
+                      
 
                         .wrap {
                             width: 80%;
@@ -403,6 +367,120 @@ body {
                                 border-bottom: none;
                             }
                         }
+                    }
+                    .inners {
+                        h5 {
+                            font-size: 16px;
+                            color: #282828;
+                            transition: all ease-in 0.3s;
+                            text-decoration: underline;
+                            text-decoration-color: transparent;
+                            font-weight: 700;
+                            margin-bottom: 10px;
+
+                            &:hover {
+                                color: $colorPink;
+                                text-decoration-color: $colorPink;
+                            }
+                        }
+
+                        span {
+                            color: #666;
+                            font-size: 13px;
+                            font-weight: 300;
+                        }
+                    }
+                    .tech-dropdown{
+                        padding: 20px 0 30px;
+                        left: -322.5px;
+                        width: 1416px;
+                        position: absolute;
+                        z-index: 888;
+                        top: -9999px;
+                        right: auto;
+                        display: block;
+                        overflow: hidden;
+                        min-width: 180px;
+                        margin-top: 20px;
+                        cursor: auto;
+                        transition: top 0s ease .25s, opacity .25s cubic-bezier(.32, .74, .57, 1), margin .25s cubic-bezier(.32, .74, .57, 1) .25s;
+                        opacity: 0;
+
+                        .block-inner{
+                            display: flex;
+                            flex-flow: row wrap;
+                            justify-content: space-between;
+                            flex-wrap: nowrap;
+                            row-gap: 25px;
+                            .card{
+                                width: 20%;
+                                padding: 0 10px;
+                                img{
+                                    border-radius: 3px;
+                                }
+                            }
+                        }
+                    }
+                    .post-dropdown{
+                            position: absolute;
+                            z-index: 9999;
+                            top: -9999px;
+                            right: auto;
+                            left: 0;
+                            display: block;
+                            visibility: hidden;
+                            min-width: 210px;
+                            margin-top: 20px;
+                            transition: top 0s, opacity .25s cubic-bezier(.32, .74, .57, 1), margin .25s cubic-bezier(.32, .74, .57, 1);
+                            pointer-events: none;
+                            opacity: 0;
+                            border-radius: 7px;
+                            box-shadow: 0 4px 30px #0000001f;
+                            padding: 10px 0;
+    
+                            // background: red;
+                            li {
+                                a {
+                                    transition: background .25s cubic-bezier(.32, .74, .57, 1), border-color .25s cubic-bezier(.32, .74, .57, 1);
+                                    border-left: 3px solid transparent;
+                                    padding: 7px 20px;
+                                    // font-weight: 300;
+                                    color: #282828;
+                                    font-size: 13px;
+    
+                                    &:hover {
+                                        border-color: $colorPink;
+                                        // background-color: #88888866;
+                                        color: $colorPink;
+                                    }
+                                }
+    
+                                &:nth-child(1) {
+                                    a {
+                                        span {
+                                            background-color: #8d80ff;
+                                            margin-left: 7px;
+                                            padding: 2px 5px;
+                                            font-size: 13px;
+                                            color: #fff;
+                                            border-radius: 3px;
+                                        }
+                                    }
+                                }
+    
+                                &:nth-child(3) {
+                                    a {
+                                        span {
+                                            background-color: #ff4545;
+                                            margin-left: 7px;
+                                            padding: 2px 5px;
+                                            font-size: 13px;
+                                            color: #fff;
+                                            border-radius: 3px;
+                                        }
+                                    }
+                                }
+                            }
                     }
                 }
             }
